made sample product "available" and "on sale"

--- a/_products/cool-kicks.html
+++ b/_products/cool-kicks.html
@@ -6,5 +6,7 @@ featured_image:
   src: "https://cdn.shopify.com/s/files/1/0750/5653/products/jo340254_061_thum1___13873_large.jpeg?v=1427794308"
   alt: "Cool Kicks"
 price: 29.99
+compare_at_price: 49.99
+available: true
 urlj: "/collections/test/cool-kicks"
 ---
