changes to products front matter

--- a/_products/awesome-sneakers.html
+++ b/_products/awesome-sneakers.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: product
 title: "Awesome Sneakers"
 collection_name: "test"
 images:
@@ -17,4 +17,3 @@ variants:
     title: "red"
     price: 19.99
 ---
-{% include product.html product = "Awesome Sneakers"  %}
