--- a/_products/gnarly-shoes.html
+++ b/_products/gnarly-shoes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Gnarly Shoes"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ASHL835-2616_thum1_62_529_16560_large.jpeg?v=1427794309"
-  alt: "Gnarly Shoes"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ASHL835-2616_thum1_62_529_16560_medium.jpeg?v=1427794309"
+    alt: "Gnarly Shoes"
 price: 39.99
 available: true
 urlj: "/collections/test/gnarly-shoes"
