--- a/_products/good-ol-shoes.html
+++ b/_products/good-ol-shoes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Good Ol' Shoes"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ALS91CCZ3_thum1___7614_large.jpeg?v=1427794311"
-  alt: "Good Ol' Shoes"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ALS91CCZ3_thum1___7614_medium.jpeg?v=1427794311"
+    alt: "Good Ol' Shoes"
 price: 9.99
 available: true
 urlj: "/collections/test/good-ol-shoes"
