--- a/_products/cool-kicks.html
+++ b/_products/cool-kicks.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Cool Kicks"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/jo340254_061_thum1___13873_large.jpeg?v=1427794308"
-  alt: "Cool Kicks"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/jo340254_061_thum1___13873_medium.jpeg?v=1427794308"
+    alt: "Cool Kicks"
 price: 29.99
 compare_at_price: 49.99
 available: true
