--- a/_products/gnary-shoes.html
+++ b/_products/gnary-shoes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Gnarly Shoes"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/WEB105500690_thum1_163_1900_18576_large.jpeg?v=1427794310"
-  alt: "Gnarly Shoes"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/WEB105500690_thum1_163_1900_18576_medium.jpeg?v=1427794310"
+    alt: "Gnarly Shoes"
 price: 59.99
 available: true
 urlj: "/collections/test/gnary-shoes"
