--- a/_products/hip-shoes.html
+++ b/_products/hip-shoes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Hip Shoes"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/WEB105494765_thum1_163_1768_18573_large.jpeg?v=1427794312"
-  alt: "Hip Shoes"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/WEB105494765_thum1_163_1768_18573_medium.jpeg?v=1427794312"
+    alt: "Hip Shoes"
 price: 39.99
 compare_at_price: 49.99
 available: true
