--- a/_products/insane-shoes.html
+++ b/_products/insane-shoes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Insane Shoes"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ALCCRGBR-F081_thum1___107_large.jpeg?v=1427794313"
-  alt: "Insane Shoes"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ALCCRGBR-F081_thum1___107_medium.jpeg?v=1427794313"
+    alt: "Insane Shoes"
 price: 39.99
 available: true
 urlj: "/collections/test/insane-shoes"
