--- a/_products/nice-shoes.html
+++ b/_products/nice-shoes.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: product
 title: "Nice Shoes"
 collection_name: "test"
-featured_image:
-  src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ADG20065_thum1_177_2152_20721_large.jpeg?v=1427794313"
-  alt: "Nice Shoes"
+images:
+  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ADG20065_thum1_177_2152_20721_medium.jpeg?v=1427794313"
+    alt: "Nice Shoes"
 price: 39.99
 compare_at_price: 49.99
 available: true
