added blog sidebar snippet

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,11 +65,9 @@ permalink: "/blogs/news/index.html"
 
   </div>
 
-{% comment %}
 
   <div class="col-md-3">
-    {% include 'blog-sidebar' %}
+    {% include blog-sidebar.html %}
   </div>
-{% endcomment %}
 
 </div>
