added javascript to toggle address new and edit forms

--- a/pages/addresses.html
+++ b/pages/addresses.html
@@ -9,7 +9,7 @@ permalink: "/account/addresses/index.html"
       <h4>My Account</h4>
     </div>
     <div class="col-xs-6">
-      <a href="#" class="btn btn-primary pull-right" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">New address</a>
+      <a href="#" class="btn btn-primary pull-right" onclick="toggleNewForm();">New address</a>
     </div>
   </div>
 </div>
