--- a/_products/gnarly-shoes.html
+++ b/_products/gnarly-shoes.html
@@ -3,8 +3,22 @@ layout: product
 title: "Gnarly Shoes"
 collection_name: "test"
 images:
-  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ASHL835-2616_thum1_62_529_16560_medium.jpeg?v=1427794309"
-    alt: "Gnarly Shoes"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
 price: 39.99
 available: true
 urlj: "/collections/test/gnarly-shoes"
