--- a/_products/gnary-shoes.html
+++ b/_products/gnary-shoes.html
@@ -3,8 +3,22 @@ layout: product
 title: "Gnarly Shoes"
 collection_name: "test"
 images:
-  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/WEB105500690_thum1_163_1900_18576_medium.jpeg?v=1427794310"
-    alt: "Gnarly Shoes"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
 price: 59.99
 available: true
 urlj: "/collections/test/gnary-shoes"
