--- a/_products/cool-kicks.html
+++ b/_products/cool-kicks.html
@@ -3,8 +3,22 @@ layout: product
 title: "Cool Kicks"
 collection_name: "test"
 images:
-  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/jo340254_061_thum1___13873_medium.jpeg?v=1427794308"
-    alt: "Cool Kicks"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
 price: 29.99
 compare_at_price: 49.99
 available: true
