--- a/_products/good-ol-shoes.html
+++ b/_products/good-ol-shoes.html
@@ -3,8 +3,22 @@ layout: product
 title: "Good Ol' Shoes"
 collection_name: "test"
 images:
-  - src: "https://cdn.shopify.com/s/files/1/0750/5653/products/ALS91CCZ3_thum1___7614_medium.jpeg?v=1427794311"
-    alt: "Good Ol' Shoes"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
 price: 9.99
 available: true
 urlj: "/collections/test/good-ol-shoes"
