--- a/_products/gnarly-shoes.html
+++ b/_products/gnarly-shoes.html
@@ -19,6 +19,18 @@ images:
     src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
     src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
     alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
+  - src1: "https://placeholdit.imgix.net/~text?txtsize=60&txt=PRODUCT&w=800&h=600"
+    src2: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300"
+    src3: "https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=150&h=150"
+    alt: "Product Title"
 price: 39.99
 available: true
 urlj: "/collections/test/gnarly-shoes"
