comment out about section in index

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ layout: default
   </div>
 </div>
 
-<div class="home_page_content">
+<div class="home_page_content hidden">
   <h3>About Us</h3>
   <p>A great About Us page helps builds trust between you and your customers. The more content you provide about you and your business, the more confident people will be when purchasing from your store.</p>
   <p>Your About Us page might include:</p>
