change submit buttons to simple buttons

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -64,8 +64,8 @@ permalink: /cart/index.html
             <textarea name="note" class="form-control" id="CartSpecialInstructions" rows="5">{{ cart.note }}</textarea>
             <hr>
             <p>
-              <input type="submit" name="update" class="btn btn-default update-cart" value="Update">
-              <input type="submit" name="checkout" class="btn btn-default" value="Checkout">
+              <input type="button" name="update" class="btn btn-default update-cart" value="Update">
+              <input type="button" name="checkout" class="btn btn-default" value="Checkout">
             </p>
 
             {% if additional_checkout_buttons %}
