changed submit buttons to simple buttons

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -29,7 +29,7 @@ permalink: /pages/contact-us/index.html
       </div>
 
       <div class="form-group text-center">
-        <input type="submit" class="btn btn-primary btn-block" value="Send">
+        <input type="button" class="btn btn-primary btn-block" value="Send">
       </div>
 
     </form>
