--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@ permalink: "/account/login/index.html"
 
 
               <p>
-                <input type="submit" class="btn btn-primary" value="Sign In">
+                <input type="button" class="btn btn-primary" value="Sign In">
               </p>
 
             </form>
@@ -56,7 +56,7 @@ permalink: "/account/login/index.html"
         </div>
 
         <p>
-          <input type="submit" class="btn btn-primary" value="Submit">
+          <input type="button" class="btn btn-primary" value="Submit">
           <button type="button" id="HideRecoverPasswordLink" class="btn btn-default pull-right">Cancel</button>
         </p>
       </form>
