--- a/pages/register.html
+++ b/pages/register.html
@@ -29,7 +29,7 @@ permalink: "/account/register/index.html"
         <input type="password" name="customer[password]" id="CreatePassword" class="form-control{% if form.errors contains 'password' %} has-error{% endif %}" placeholder="Password">
       </div>
       <div class="form-group">
-        <input type="submit" value="Create Account" class="pull-left btn btn-primary">
+        <input type="button" value="Create Account" class="pull-left btn btn-primary">
         <a class="pull-right" href="{{ shop.url }}">Cancel</a>
       </div>
     </form>
