--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@ layout: default
 <div class="row products-grid">
 
   <div class="col-md-3 col-sm-4 col-xs-6">
-    <div class="product-grid-item thumbnail">
-      <a href="/products/awesome-sneakers" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
+    <div class="thumbnail">
+      <a href="/products/awesome-sneakers">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
       </a>
-      <div class="product-caption">
-        <h5>
-          <a href="/products/awesome-sneakers">Product Title</a>
-        </h5>
+      <div class="caption">
+        <h5><a href="/products/awesome-sneakers">Product Title</a></h5>
         <p>
           <strong><s>€150.00</s></strong>
           <strong class="text-warning">€110.00</strong>
@@ -27,11 +25,11 @@ layout: default
     </div>
   </div>
   <div class="col-md-3 col-sm-4 col-xs-6">
-    <div class="product-grid-item thumbnail">
-      <a href="/products/cool-kicks" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
+    <div class="thumbnail">
+      <a href="/products/cool-kicks">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
       </a>
-      <div class="product-caption">
+      <div class="caption">
         <h5>
           <a href="/products/cool-kicks">Product Title</a>
         </h5>
@@ -42,11 +40,11 @@ layout: default
     </div>
   </div>
   <div class="col-md-3 col-sm-4 col-xs-6">
-    <div class="product-grid-item thumbnail">
-      <a href="/products/gnarly-shoes-1" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
+    <div class="thumbnail">
+      <a href="/products/gnarly-shoes-1">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
       </a>
-      <div class="product-caption">
+      <div class="caption">
         <h5>
           <a href="/products/gnarly-shoes-1">Product Title</a>
         </h5>
@@ -57,11 +55,11 @@ layout: default
     </div>
   </div>
   <div class="col-md-3 col-sm-4 col-xs-6">
-    <div class="product-grid-item thumbnail">
-      <a href="/products/gnarly-shoes-1" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
+    <div class="thumbnail">
+      <a href="/products/gnarly-shoes-1">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Product Title">
       </a>
-      <div class="product-caption">
+      <div class="caption">
         <h5>
           <a href="/products/gnarly-shoes-1">Product Title</a>
         </h5>
@@ -77,11 +75,11 @@ layout: default
 
 <div class="row products-grid">
   <div class="col-md-3">
-    <div class="product-grid-item thumbnail">
-      <a href="/collections/spring-collection" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Collection Title">
+    <div class="thumbnail">
+      <a href="/collections/spring-collection">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Collection Title">
       </a>
-      <div class="product-caption text-center">
+      <div class="caption text-center">
         <h5>
           <a href="/collections/spring-collection">Collection Title</a>
         </h5>
@@ -89,11 +87,11 @@ layout: default
     </div>
   </div>
   <div class="col-md-3">
-    <div class="product-grid-item thumbnail">
-      <a href="/collections/frontpage" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Collection Title">
+    <div class="thumbnail">
+      <a href="/collections/frontpage">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Collection Title">
       </a>
-      <div class="product-caption text-center">
+      <div class="caption text-center">
         <h5>
           <a href="/collections/frontpage">Collection Title</a>
         </h5>
@@ -101,11 +99,11 @@ layout: default
     </div>
   </div>
   <div class="col-md-3">
-    <div class="product-grid-item thumbnail">
-      <a href="/collections/summer" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="">
+    <div class="thumbnail">
+      <a href="/collections/summer">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="">
       </a>
-      <div class="product-caption text-center">
+      <div class="caption text-center">
         <h5>
           <a href="/collections/summer">Collection Title</a>
         </h5>
@@ -113,11 +111,11 @@ layout: default
     </div>
     </div>
   <div class="col-md-3">
-    <div class="product-grid-item thumbnail">
-      <a href="/collections/spring-collection" class="grid__image">
-        <img class="grid-img" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Collection Title">
+    <div class="thumbnail">
+      <a href="/collections/spring-collection">
+        <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=PRODUCT&w=300&h=300" alt="Collection Title">
       </a>
-      <div class="product-caption text-center">
+      <div class="caption text-center">
         <h5>
           <a href="/collections/spring-collection">Collection Title</a>
         </h5>
