update collection title

--- a/_collections/test.html
+++ b/_collections/test.html
@@ -1,6 +1,6 @@
 ---
 layout: collection
-title: "Pandora: Miami Fashion Week 2014"
+title: "Collection 1"
 id: "test"
 thumbnail: "pandora-miami-fashion-week-2014.jpg"
 ---
