use better image placeholers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     <div class="col-md-3">
       <div class="thumbnail">
         <a href="/collections/test">
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=COLLECTION&w=300&h=300" alt="Collection Title">
+          <img src="https://placeimg.com/253/253/{{ i }}" alt="Collection Title">
         </a>
         <div class="caption text-center">
           <h5>
