--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
   {% for i in (1..4) %}
     <div class="col-md-3">
       <div class="thumbnail">
-        <a href="/collections/test">
+        <a href="/collections/test" class="grid-img-outer">
           <img src="https://placeimg.com/253/253/{{ i }}" alt="Collection Title">
         </a>
         <div class="caption text-center">
