update image placeholders

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ layout: default
 
 <div class="row">
   {% for i in (1..4) %}
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6">
       <div class="thumbnail">
         <a href="/collections/test" class="grid-img-outer">
-          <img src="https://placeimg.com/253/253/{{ i }}" alt="Collection Title">
+          <img src="http://lorempixel.com/g/253/253/technics?random={{ i }}" alt="Collection Title">
         </a>
         <div class="caption text-center">
           <h5>
