added missing titles

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -58,7 +58,7 @@ permalink: /cart/index.html
             </p>
             <small><em>Shipping & taxes calculated at checkout</em></small>
             <hr>
-            <label for="CartSpecialInstructions">{{ 'cart.general.note' | t }}</label>
+            <label for="CartSpecialInstructions">Special instructions for seller</label>
             <textarea name="note" class="form-control" id="CartSpecialInstructions" rows="5">{{ cart.note }}</textarea>
             <hr>
             <p>
