--- a/pages/register.html
+++ b/pages/register.html
@@ -8,7 +8,7 @@ permalink: "/account/register/index.html"
 
   <div class="col-md-4 col-md-offset-4">
 
-    <h1>{{ 'customer.register.title' | t }}</h1>
+    <h1>Create Account</h1>
 
     <form>
 
