changed url for cancel in registration page

--- a/pages/register.html
+++ b/pages/register.html
@@ -30,7 +30,7 @@ permalink: "/account/register/index.html"
       </div>
       <div class="form-group">
         <input type="button" value="Create Account" class="pull-left btn btn-primary">
-        <a class="pull-right" href="{{ shop.url }}">Cancel</a>
+        <a class="pull-right" href="/">Cancel</a>
       </div>
     </form>
 
