made account/login/register page titles consistent

--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: "Customer login"
 permalink: "/account/login/index.html"
 ---
@@ -9,9 +9,6 @@ permalink: "/account/login/index.html"
 
     <div id="CustomerLoginForm">
       <form accept-charset="UTF-8" action="https://three99-test.myshopify.com/account/login" id="customer_login" method="post" _lpchecked="1"><input name="form_type" type="hidden" value="customer_login"><input name="utf8" type="hidden" value="✓">
-
-              <h1>Login</h1>
-
 
               <div class="form-group">
                 <label for="CustomerEmail" class="hidden">Email</label>
