--- a/pages/register.html
+++ b/pages/register.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: "Create Account"
 permalink: "/account/register/index.html"
 ---
@@ -7,8 +7,6 @@ permalink: "/account/register/index.html"
 <div class="row">
 
   <div class="col-md-4 col-md-offset-4">
-
-    <h1>Create Account</h1>
 
     <form>
 
