--- a/pages/account.html
+++ b/pages/account.html
@@ -1,13 +1,10 @@
 ---
-layout: default
-title: "Account"
+layout: page
+title: "My Account"
 permalink: "/account/index.html"
 ---
 
 {% assign customer = site.data.customer %}
-<div class="page-header">
-  <h2>My Account</h2>
-</div>
 
 <div class="row">
 
